--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <div class="song-image-container">
                                 <p class="queue-number">08</p>
                                 <div class="image-container">
-                                    <img class="queue-song-img" src="assets/queue/we'regood.jpg" />
+                                    <img class="queue-song-img" src="assets/Queue/we'regood.jpg" />
                                     <i class="fas play-btn fa-play"></i>
                                 </div>
                                 <div class="song-and-artist-container">
@@ -217,7 +217,7 @@
                             <div class="song-image-container">
                                 <p class="queue-number">09</p>
                                 <div class="image-container">
-                                    <img class="queue-song-img" src="assets/queue/shapeofyou.jpg" />
+                                    <img class="queue-song-img" src="assets/Queue/shapeofyou.jpg" />
                                     <i class="fas play-btn fa-play"></i>
                                 </div>
                                 <div class="song-and-artist-container">
@@ -234,7 +234,7 @@
                             <div class="song-image-container">
                                 <p class="queue-number">10</p>
                                 <div class="image-container">
-                                    <img class="queue-song-img" src="assets/queue/cheapthrills.jpg" />
+                                    <img class="queue-song-img" src="assets/Queue/cheapthrills.jpg" />
                                     <i class="fas play-btn fa-play"></i>
                                 </div>
                                 <div class="song-and-artist-container">
@@ -251,7 +251,7 @@
                             <div class="song-image-container">
                                 <p class="queue-number">11</p>
                                 <div class="image-container">
-                                    <img class="queue-song-img" src="assets/queue/roar.jpg" />
+                                    <img class="queue-song-img" src="assets/Queue/roar.jpg" />
                                     <i class="fas play-btn fa-play"></i>
                                 </div>
                                 <div class="song-and-artist-container">
